  ("Break").

* Directions can be abbreviated with -, _, [, ], <, >, v or ^ like
  in key or mouse bindings.

* New extended variable $[func.context].

* New Style option MoveWindowByProgramMethod.  Tries to autodetect
  whether application windows are moved honouring the ICCCM or not
  (default).  The method can be overridden manually if the
  detection does not work.

-------------------------------------------------------------------

Changes in development release 2.5.7 (30-May-2003)

* The commands Cond and CondCase now support checking for
  inequality by prefixing the return code with '!'.

* Schedule and Deschedule support hexadecimal and octal command
  ids.

* In FvwmIconMan, windows can move from one manager to another
  according to the managers' Resolution options.

* In order to fix a problem with StartsOnScreen and applications
  that set a user specified position hint, the StartsOnScreen style
  no longer works for the following modules:  FvwmBanner,
  FvwmButtons, FvwmDragWell, FvwmIconBox, FvwmIconMan, FvwmIdent,
  FvwmPager, FvwmScroll, FvwmTaskBar, FvwmWharf, FvwmWinList.  Use
  the '@<screen>' bit in the module geometry specification where
  applicable.

* Documented variable $[gt.any_string] and LocalePath command
  (new in 2.5.5).

* Added gettext support to FvwmScript. New head instruction
  UseGettext and WindowLocaleTitle. New widget instruction
  LocaleTitle. New instruction ChangeLocaleTitle and new function
  Gettext.

* WindowListFunc is executed now within a window context, so
  a prefix "WindowId $0" is not needed in its definition anymore,
  and it is advised to remove it in user configs.

* FvwmEvent now executes all window related events within a window
  context, so PassId is not needed anymore, and all prefixes
  "WindowId $0" may be removed in user event handlers.

* New FvwmTaskBar option NoDefaultStartButton.

-------------------------------------------------------------------
