@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "FVWM-MENU-HEADLINES 1"
-.TH FVWM-MENU-HEADLINES 1 "2003-03-15" "perl v5.8.0" "FVWM Utilities"
+.TH FVWM-MENU-HEADLINES 1 "2003-07-08" "perl v5.8.0" "FVWM Utilities"
 .SH "NAME"
 fvwm\-menu\-headlines \- builds headlines menu definition for FVWM
 .SH "SYNOPSIS"
@@ -159,7 +159,7 @@ fvwm\-menu\-headlines \- builds headlines menu definition for FVWM
 This configurable perl script builds an fvwm menu definition for headlines
 of popular news web sites: FreshMeat, Slashdot, LinuxToday, LinuxApps,
 DaemonNews, GNOME\-News, KDE\-News, RootPrompt,
-LinuxFr, ThinkGeek, \s-1CNN\s0, BBC\-World, BBC-SciTech and more.
+LinuxFr, ThinkGeek, \s-1CNN\s0, \s-1BBC\s0 and more.
 .PP
 It is possible to specify a customized menu item format, change a command
 (usually launching a browser) and add menu icons (there is a support for
