@@ -1,3 +1,9 @@
+2003-07-08  Mikhael Goikhman  <migo@homemail.com>
+
+	* fvwm-menu-headlines.1:
+	* fvwm-menu-headlines.in:
+	replace old BBC-World and BBC-SciTech with new BBC headlines
+
 2003-04-18  Mikhael Goikhman  <migo@homemail.com>
 
 	* fvwm-config.in:
